fix username alignment in top bar

--- a/client/components/common/user.less
+++ b/client/components/common/user.less
@@ -19,6 +19,7 @@
       font-weight: 500;
       text-transform: uppercase;
       display: block;
+      text-align: right;
     }
 
     .wallet {
